# cfx-resource-scrambler

./: .gitignore  Cargo.toml  README.md  loader.lua
src/: main.rs  scrambler.rs
