[package]
name = "cfx-resource-scrambler"
version = "0.3.0"
edition = "2021"
description = "Rust port of fxserver-resource-scrambler: replaces FiveM resource events with random UUIDs"
license = "GPL-3.0"
authors = ["Jérémie N'gadi (original)", "Rust port"]

[[bin]]
name = "cfx-resource-scrambler"
path = "src/main.rs"

[dependencies]
regex = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
